# ferrous

./: .gitignore  Makefile.toml  OVMF.fd  README.md
ferrous-kernel/: Cargo.toml  rust-toolchain.toml
ferrous-kernel/.cargo/: config.toml
ferrous-kernel/src/: main.rs
oxidize/: Cargo.toml  Makefile.toml  rust-toolchain.toml  startup.nsh
oxidize/src/: elf.rs  fs.rs  load.rs  main.rs
